# Motion_Market

./: CMakeLists.txt  LICENSE  README.md  pubspec.yaml
backend/include/: crypto_api.h  spotify_api.h  utils.h
backend/src/: crypto_api.cpp  main.cpp  spotify_api.cpp
bulid/: CMakeCache.txt  Makefile  cmake_install.cmake  imgui.ini
flutter_application_1/: analysis_options.yaml  pubspec.yaml
flutter_application_1/lib/: backend.dart  home_screen.dart  main.dart  myapp.dart
flutter_application_1/linux/: CMakeLists.txt  blockchain.cpp  blockchain.h  graph.cpp  graph.h
flutter_application_1/test/: widget_test.dart
lib/: main.dart
lib/models/: artist_model.dart  crypto_model.dart
lib/screens/: home_screen.dart  invest_screen.dart  portfolio_screen.dart
python/: candlestick_script.py  data_processor.py
src/: Artists.h  FakeDataGenerator.cpp  FakeDataGenerator.h  ImGuiSetup.cpp  ImGuiSetup.h  Market.cpp  Market.h  RenderGUI.cpp  RenderGUI.h  Token.cpp  Token.h  User.cpp  User.h  UserProfile.cpp  UserProfile.h  artists.cpp  artists.h  main.cpp
